# CppAdsPrometeusConnector

./: CMakeLists.txt  README.md  install_adslib.sh  main.cpp  testConfig.json
src/: ADSProvidor.cpp  ADSProvidor.h  Configuration.cpp  Configuration.h  ProcessDataBuffer.cpp  ProcessDataBuffer.h  PrometheusEndpoint.cpp  PrometheusEndpoint.h  main.cpp
